deployment/deployment-bkp.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: springboot-primeface
  namespace: devcloud1user4-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-primeface
  template:
    metadata:
      labels:
        app: springboot-primeface
    spec:
      containers:
        - name: container
          image: 'quay.io/devcloud1user4/myrepo/spring-boot-primeface:1.0.14'
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: quay-secret
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
