deployment/service.yml
kind: Service
apiVersion: v1
metadata:
  name: example
  namespace: devcloud1user4-dev
  uid: b4c85bf6-78ec-4b8e-a8a4-725dc8a95376
  resourceVersion: '6207357429'
  creationTimestamp: '2026-10-07T10:10:58Z'
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: v1
      time: '2026-10-07T10:10:58Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:internalTrafficPolicy': {}
          'f:ports':
            .: {}
            'k:{"port":8080,"protocol":"TCP"}':
              .: {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
          'f:selector': {}
          'f:sessionAffinity': {}
          'f:type': {}
spec:
  clusterIP: 172.30.201.207
  ipFamilies:
    - IPv4
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  clusterIPs:
    - 172.30.201.207
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: springboot-primeface
status:
  loadBalancer: {}
